ボタンクリックで描画が始まるように修正

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./../../webroot/css/style.css">
   </head>
   <body>
+    <button class="text-btn">テキスト描画</button>
+    <button class="image-btn">画像描画</button>
     <div id="pixi"></div>
   </body>
   <script src="./../../webroot/js/vendor.bundle.js"></script>
