--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="text-btn btn">テキスト描画</div>
     <div class="image-btn btn">画像描画</div>
+    <div class="multiple-image-btn btn">複数画像描画</div>
     <div id="pixi"></div>
   </body>
   <script src="./../../webroot/js/vendor.bundle.js"></script>
