--- a/app/views/pages/snow.html
+++ b/app/views/pages/snow.html
@@ -12,10 +12,17 @@
         width: 100vw;
         height: 100vh;
       }
+      #pixi-snow-particle img {
+        display: none;
+      }
     </style>
   </head>
   <body>
-    <div id="pixi-snow-particle" data-min-size="20" data-max-size="50" data-min-speed="400" data-max-speed="600"></div>
+    <div id="pixi-snow-particle" data-quantity="100" data-min-size="20" data-max-size="50" data-min-speed="400" data-max-speed="600" data-min-swing="-80" data-max-swing="80" data-min-swing-duration="3000" data-max-swing-duration="5000">
+      <img src="./../../webroot/images/snow.png" alt="">
+      <img src="./../../webroot/images/snow2.png" alt="">
+      <img src="./../../webroot/images/snow3.png" alt="">
+    </div>
   </body>
   <script src="./../../webroot/js/vendor.bundle.js"></script>
   <script src="./../../webroot/js/snow.bundle.js" charset="utf-8"></script>
