[update] コメントの追記、let -> const修正、JSDocの記述更新等

--- a/app/views/pages/snow.html
+++ b/app/views/pages/snow.html
@@ -18,6 +18,13 @@
     </style>
   </head>
   <body>
+    <!--
+      data-quantity: 雪の量
+      data-**-size: 雪のサイズ
+      data-**-speed: 雪が落ちる速度
+      data-**-swing: 雪の揺れ幅
+      data-**-swing-duration: 揺れの速度
+     -->
     <div id="pixi-snow-particle" data-quantity="100" data-min-size="20" data-max-size="50" data-min-speed="400" data-max-speed="600" data-min-swing="-80" data-max-swing="80" data-min-swing-duration="3000" data-max-swing-duration="5000">
       <img src="./../../webroot/images/snow.png" alt="">
       <img src="./../../webroot/images/snow2.png" alt="">
